# CPADiscordBot

./: .env.example  .gitignore  README.md  howtocontribute.md  main.py  pyproject.toml  requirements.txt
bot-env/: main.py  pyvenv.cfg
bot-env/Scripts/: activate  activate.bat
cogs/: Mock_Interv_Practice.py  assignment_reminder.py  assignment_tracker.py  code_review.py  codechallenge.py  daily_challenge.py  daily_tip.py  first_command.py  helpcommands.py  progress_alerts.py  quizzes.py  weekly_recap.py
data/: assignments.json  challenges.json  courses.json  database.sqlite  quizzes.json  statuses.json  trackers.sqlite
management/: gpt_manager.py  status_manager.py  tracker_manager.py
models/: quiz_category.py  quiz_loader.py
models/code_challenges/: challenge.py  challenge_category.py  challenge_loader.py
models/db/: DatabaseConnection.py  database.py
models/db/models/: reminder.py  stats.py  tracker.py  trackerModel.py
models/quiz/: quiz_category.py  quiz_loader.py  quiz_questions.py
models/status/: status_manager.py
