[tool.poetry]
name = "gravey"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
disnake = "^2.9.2"
openai = "^1.54.3"
h11 = "0.14.0"
attrs = "^24.2.0"
distro = "1.9.0"
colorama = "^0.4.6"
idna = "^3.10"
multidict = "^6.1.0"
propcache = "^0.2.0"
typing_extensions = "^4.12.2"
exceptiongroup = "^1.2.2"
sniffio = "^1.3.1"
httpcore = "^1.0.6"
certifi = "^2024.8.30"
jiter = "^0.7.0"
httpx = "^0.27.2"
pydantic = "^2.9.2"
anyio = "^4.6.2.post1"
pydantic_core = "^2.23.4"
yarl = "^1.17.1"
async-timeout = "^4.0.3"
aiohttp = "^3.10.10"
aiosignal = "^1.3.1"
frozenlist = "^1.5.0"
aiohappyeyeballs = "^2.4.3"
greenlet = "^3.1.1"
annotated-types = "^0.7.0"
setuptools = "^63.2.0"
SQLAlchemy = "^2.0.36"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
